# pi-pico-environment-monitor

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
cmake/: AddVersionHeader.cmake  MakeVersionHeader.cmake  version.h.in
mqtt-bridge/: Dockerfile  mqtt-bridge.py
src/: lwipopts.h  main.cpp  source.cpp  tusb_config.h  usb_descriptors.c
src/b1g/log/: Logger.cpp  Logger.hpp
src/b1g/mqtt/: EncodeMqtt.cpp  EncodeMqtt.hpp
src/b1g/sensor/: AHT21.cpp  AHT21.hpp  BME680.cpp  BME680.hpp  I2cScan.cpp  I2cScan.hpp
src/log/: Logger.cpp  Logger.hpp
src/sensor/: BME680.cpp  BME680.hpp  I2cScan.cpp  I2cScan.hpp
